  * [arm64] Fix CONFIG_INFINIBAND_HNS_HIP06 and CONFIG_INFINIBAND_HNS_HIP08
    from tristate to boolean

  [ Noah Meyerhans ]
  * [arm64] Enable KVM_ARM_HOST and KVM_ARM_PMU
  * [arm64] Enable CONFIG_ARM64_ERRATUM_1418040
  * [arm64/cloud-arm64] Introduce cloud build flavour

  [ Mark Pearson ]
  * [amd64] CONFIG_SND_SOC_SOF_COMETLAKE_LP_SUPPORT and CONFIG_SND_SOC_SOF_COMETLAKE_H_SUPPORT

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 20 Jan 2020 01:00:04 +0000

linux (5.5~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Romain Perier ]
  * [rt] Disable until it is updated for 5.5 or later
  * [mips*] Remove obsolete patch
    MIPS-Loongson-3-Add-Loongson-LS3A-RS780E-1-way-machi.patch
  * Retrieve the new aufs5 patches from the upstream tree, with an update in
    aufs5-standalone.patch (see its header).
  * Refreshed patches:
    - debian/dfsg/vs6624-disable.patch
    - bugfix/all/firmware_class-log-every-success-and-failure.patch
    - bugfix/all/
      radeon-amdgpu-firmware-is-required-for-drm-and-kms-on-r600-onward.patch
    - bugfix/all/disable-some-marvell-phys.patch
    - features/all/
      security-perf-allow-further-restriction-of-perf_event_open.patch
    - features/x86/x86-make-x32-syscall-support-conditional.patch
    - bugfix/all/fs-add-module_softdep-declarations-for-hard-coded-cr.patch
    - features/all/lockdown/
      efi-add-an-efi_secure_boot-flag-to-indicate-secure-b.patch

  [ Ben Hutchings ]
  * udeb: Add f2fs-modules package
  * linux-kbuild: Stop building pnmtologo
  * linux-kbuild: Add new file to Makefile for kconfig

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 06 Jan 2020 04:26:45 +0000

linux (5.4.19-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.4.14
    - [arm64,armhf] soc: amlogic: meson-ee-pwrc: propagate PD provider
      registration errors
    - [arm64,armhf] soc: amlogic: meson-ee-pwrc: propagate errors from