@@ -1,0 +1,40 @@
+libcpupower.so.1 libcpupower1 #MINVER#
+ cpu_topology_release@Base 4.7~rc2-1~exp1
+ cpufreq_get_affected_cpus@Base 4.7~rc2-1~exp1
+ cpufreq_get_available_frequencies@Base 4.7~rc2-1~exp1
+ cpufreq_get_available_governors@Base 4.7~rc2-1~exp1
+ cpufreq_get_boost_frequencies@Base 5.5.8-1~exp1
+ cpufreq_get_driver@Base 4.7~rc2-1~exp1
+ cpufreq_get_freq_hardware@Base 4.7~rc2-1~exp1
+ cpufreq_get_freq_kernel@Base 4.7~rc2-1~exp1
+ cpufreq_get_hardware_limits@Base 4.7~rc2-1~exp1
+ cpufreq_get_policy@Base 4.7~rc2-1~exp1
+ cpufreq_get_related_cpus@Base 4.7~rc2-1~exp1
+ cpufreq_get_stats@Base 4.7~rc2-1~exp1
+ cpufreq_get_transition_latency@Base 4.7~rc2-1~exp1
+ cpufreq_get_transitions@Base 4.7~rc2-1~exp1
+ cpufreq_modify_policy_governor@Base 4.7~rc2-1~exp1
+ cpufreq_modify_policy_max@Base 4.7~rc2-1~exp1
+ cpufreq_modify_policy_min@Base 4.7~rc2-1~exp1
+ cpufreq_put_affected_cpus@Base 4.7~rc2-1~exp1
+ cpufreq_put_available_frequencies@Base 4.7~rc2-1~exp1
+ cpufreq_put_available_governors@Base 4.7~rc2-1~exp1
+ cpufreq_put_boost_frequencies@Base 5.5.8-1~exp1
+ cpufreq_put_driver@Base 4.7~rc2-1~exp1
+ cpufreq_put_policy@Base 4.7~rc2-1~exp1
+ cpufreq_put_related_cpus@Base 4.7~rc2-1~exp1
+ cpufreq_put_stats@Base 4.7~rc2-1~exp1
+ cpufreq_set_frequency@Base 4.7~rc2-1~exp1
+ cpufreq_set_policy@Base 4.7~rc2-1~exp1
+ cpuidle_get_driver@Base 4.7~rc2-1~exp1
+ cpuidle_get_governor@Base 4.7~rc2-1~exp1
+ cpuidle_is_state_disabled@Base 4.7~rc2-1~exp1
+ cpuidle_state_count@Base 4.7~rc2-1~exp1
+ cpuidle_state_desc@Base 4.7~rc2-1~exp1
+ cpuidle_state_disable@Base 4.7~rc2-1~exp1
+ cpuidle_state_latency@Base 4.7~rc2-1~exp1
+ cpuidle_state_name@Base 4.7~rc2-1~exp1
+ cpuidle_state_time@Base 4.7~rc2-1~exp1
+ cpuidle_state_usage@Base 4.7~rc2-1~exp1
+ cpupower_is_cpu_online@Base 4.7~rc2-1~exp1
+ get_cpu_topology@Base 4.7~rc2-1~exp1
