@@ -1,38 +1,0 @@
-libcpupower.so.2 libcpupower2 #MINVER#
- cpu_topology_release@Base 5.1.3-1~exp1
- cpufreq_get_affected_cpus@Base 5.1.3-1~exp1
- cpufreq_get_available_governors@Base 5.1.3-1~exp1
- cpufreq_get_driver@Base 5.1.3-1~exp1
- cpufreq_get_freq_hardware@Base 5.1.3-1~exp1
- cpufreq_get_freq_kernel@Base 5.1.3-1~exp1
- cpufreq_get_frequencies@Base 5.1.3-1~exp1
- cpufreq_get_hardware_limits@Base 5.1.3-1~exp1
- cpufreq_get_policy@Base 5.1.3-1~exp1
- cpufreq_get_related_cpus@Base 5.1.3-1~exp1
- cpufreq_get_stats@Base 5.1.3-1~exp1
- cpufreq_get_transition_latency@Base 5.1.3-1~exp1
- cpufreq_get_transitions@Base 5.1.3-1~exp1
- cpufreq_modify_policy_governor@Base 5.1.3-1~exp1
- cpufreq_modify_policy_max@Base 5.1.3-1~exp1
- cpufreq_modify_policy_min@Base 5.1.3-1~exp1
- cpufreq_put_affected_cpus@Base 5.1.3-1~exp1
- cpufreq_put_available_governors@Base 5.1.3-1~exp1
- cpufreq_put_driver@Base 5.1.3-1~exp1
- cpufreq_put_frequencies@Base 5.1.3-1~exp1
- cpufreq_put_policy@Base 5.1.3-1~exp1
- cpufreq_put_related_cpus@Base 5.1.3-1~exp1
- cpufreq_put_stats@Base 5.1.3-1~exp1
- cpufreq_set_frequency@Base 5.1.3-1~exp1
- cpufreq_set_policy@Base 5.1.3-1~exp1
- cpuidle_get_driver@Base 5.1.3-1~exp1
- cpuidle_get_governor@Base 5.1.3-1~exp1
- cpuidle_is_state_disabled@Base 5.1.3-1~exp1
- cpuidle_state_count@Base 5.1.3-1~exp1
- cpuidle_state_desc@Base 5.1.3-1~exp1
- cpuidle_state_disable@Base 5.1.3-1~exp1
- cpuidle_state_latency@Base 5.1.3-1~exp1
- cpuidle_state_name@Base 5.1.3-1~exp1
- cpuidle_state_time@Base 5.1.3-1~exp1
- cpuidle_state_usage@Base 5.1.3-1~exp1
- cpupower_is_cpu_online@Base 5.1.3-1~exp1
- get_cpu_topology@Base 5.1.3-1~exp1
