@@ -11,7 +11,7 @@ Description: CPU power management tools for Linux
  .
  ${cpupower:Arch-Description}
 
-Package: libcpupower2
+Package: libcpupower1
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Section: libs
 Architecture: linux-any
@@ -26,7 +26,7 @@ Package: libcpupower-dev
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Section: libdevel
 Architecture: linux-any
-Depends: ${misc:Depends}, libcpupower2 (= ${binary:Version})
+Depends: ${misc:Depends}, libcpupower1 (= ${binary:Version})
 Provides: libcpufreq-dev
 Conflicts: libcpufreq-dev
 Replaces: libcpufreq-dev
