@@ -46,6 +46,10 @@ linux (5.5.8-1~exp1) UNRELEASED; urgency=medium
   [ Mark Pearson ]
   * [amd64] CONFIG_SND_SOC_SOF_COMETLAKE_LP_SUPPORT and CONFIG_SND_SOC_SOF_COMETLAKE_H_SUPPORT
 
+  [ Salvatore Bonaccorso ]
+  * libcpupower: Lower back soname version to 1 and add new
+    cpufreq_{get,put}_boost_frequencies methods
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 20 Jan 2020 01:00:04 +0000
 
 linux (5.5~rc5-1~exp1) experimental; urgency=medium
